--- a/popup.html
+++ b/popup.html
@@ -153,112 +153,269 @@
         padding: 1px 4px;
         border-radius: 6px;
       }
-      #settings.hidden {
+      .hidden {
         display: none;
+      }
+
+      /* Tab styles */
+      .tab-nav {
+        display: flex;
+        border-bottom: 1px solid var(--bd);
+        margin-bottom: 12px;
+      }
+
+      .tab-button {
+        flex: 1;
+        padding: 8px 12px;
+        border: none;
+        background: transparent;
+        color: var(--muted);
+        font-weight: 600;
+        cursor: pointer;
+        border-bottom: 2px solid transparent;
+        transition: all 0.2s;
+      }
+
+      .tab-button:hover {
+        color: var(--fg);
+        background: #f8f8f8;
+      }
+
+      .tab-button.active {
+        color: var(--fg);
+        border-bottom-color: #8ab4f8;
+      }
+
+      .tab-content {
+        display: none;
+      }
+
+      .tab-content.active {
+        display: block;
+      }
+
+      textarea {
+        width: 100%;
+        padding: 8px 10px;
+        border: 1px solid var(--bd);
+        border-radius: 8px;
+        outline: none;
+        font-family: inherit;
+        resize: vertical;
+        min-height: 80px;
+      }
+
+      textarea:focus {
+        border-color: #8ab4f8;
+        box-shadow: 0 0 0 3px rgba(138, 180, 248, 0.25);
       }
     </style>
   </head>
   <body>
     <h1>Dev Stack</h1>
 
-    <!-- Enabled toggle -->
-    <div class="label-row" style="margin-top: 2px">
-      <span>Enabled</span>
-      <label class="toggle">
-        <input id="enabled" type="checkbox" />
-        <span class="slider"></span>
-      </label>
+    <!-- Tab Navigation -->
+    <div class="tab-nav">
+      <button class="tab-button active" data-tab="url-swapper">
+        URL Swapper
+      </button>
+      <button class="tab-button" data-tab="cache-buster">Cache Buster</button>
     </div>
-    <div id="settings" class="hidden">
-      <!-- URLs -->
-      <label for="source">Source URL (match)</label>
-      <input id="source" type="text" placeholder="e.g. http://localhost:3000" />
 
-      <label for="dest">Destination URL (replace)</label>
-      <input id="dest" type="text" placeholder="e.g. https://example.com" />
-
-      <!-- Origin-only toggle -->
-      <div class="label-row" style="margin-top: 8px">
-        <span>Match by origin only (scheme + host)</span>
+    <!-- URL Swapper Tab -->
+    <div id="url-swapper-tab" class="tab-content active">
+      <!-- Enabled toggle -->
+      <div class="label-row" style="margin-top: 2px">
+        <span>Enabled</span>
         <label class="toggle">
-          <input id="originOnly" type="checkbox" />
+          <input id="urlSwapperEnabled" type="checkbox" />
           <span class="slider"></span>
         </label>
       </div>
-
-      <!-- Swap types -->
-      <fieldset>
-        <legend>Swap these types</legend>
-
-        <div class="label-row">
-          <span>Images (<code>img/src, srcset, data-*</code>)</span>
-          <label class="toggle">
-            <input type="checkbox" id="swapImages" />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="label-row">
-          <span>CSS files (<code>link[rel=stylesheet]</code>)</span>
-          <label class="toggle">
-            <input type="checkbox" id="swapCSS" />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="label-row">
-          <span>JS files (<code>script[src]</code>)</span>
-          <label class="toggle">
-            <input type="checkbox" id="swapJS" />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="label-row">
-          <span>Video / Audio (<code>video, audio, poster, source</code>)</span>
-          <label class="toggle">
-            <input type="checkbox" id="swapMedia" />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="label-row">
-          <span>Iframes (<code>iframe[src]</code>)</span>
-          <label class="toggle">
-            <input type="checkbox" id="swapIframes" />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="label-row">
-          <span
-            >Inline CSS (<code>&lt;style&gt;</code> &
-            <code>style=""</code>)</span
-          >
-          <label class="toggle">
-            <input type="checkbox" id="swapInlineCSS" />
-            <span class="slider"></span>
-          </label>
-        </div>
-      </fieldset>
-
-      <!-- Menu links -->
-      <fieldset>
-        <legend>Optional: Menu links</legend>
-        <div class="hint">
-          Swap only anchors that match these selectors (comma-separated). Leave
-          empty to disable.
-        </div>
+      <div id="urlSwapperSettings" class="hidden">
+        <!-- URLs -->
+        <label for="source">Source URL (match)</label>
         <input
-          id="menuSelectors"
+          id="source"
           type="text"
-          placeholder="e.g. nav a, .menu a, header .navbar a"
+          placeholder="e.g. http://localhost:3000"
         />
-      </fieldset>
 
-      <div class="hint">
-        Tip: Most use Images, CSS, JS. Keep menu selectors empty unless you
-        specifically want menu links swapped.
+        <label for="dest">Destination URL (replace)</label>
+        <input id="dest" type="text" placeholder="e.g. https://example.com" />
+
+        <!-- Origin-only toggle -->
+        <div class="label-row" style="margin-top: 8px">
+          <span>Match by origin only (scheme + host)</span>
+          <label class="toggle">
+            <input id="originOnly" type="checkbox" />
+            <span class="slider"></span>
+          </label>
+        </div>
+
+        <!-- Swap types -->
+        <fieldset>
+          <legend>Swap these types</legend>
+
+          <div class="label-row">
+            <span>Images (<code>img/src, srcset, data-*</code>)</span>
+            <label class="toggle">
+              <input type="checkbox" id="swapImages" />
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="label-row">
+            <span>CSS files (<code>link[rel=stylesheet]</code>)</span>
+            <label class="toggle">
+              <input type="checkbox" id="swapCSS" />
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="label-row">
+            <span>JS files (<code>script[src]</code>)</span>
+            <label class="toggle">
+              <input type="checkbox" id="swapJS" />
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="label-row">
+            <span
+              >Video / Audio (<code>video, audio, poster, source</code>)</span
+            >
+            <label class="toggle">
+              <input type="checkbox" id="swapMedia" />
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="label-row">
+            <span>Iframes (<code>iframe[src]</code>)</span>
+            <label class="toggle">
+              <input type="checkbox" id="swapIframes" />
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="label-row">
+            <span
+              >Inline CSS (<code>&lt;style&gt;</code> &
+              <code>style=""</code>)</span
+            >
+            <label class="toggle">
+              <input type="checkbox" id="swapInlineCSS" />
+              <span class="slider"></span>
+            </label>
+          </div>
+        </fieldset>
+
+        <!-- Menu links -->
+        <fieldset>
+          <legend>Optional: Menu links</legend>
+          <div class="hint">
+            Swap only anchors that match these selectors (comma-separated).
+            Leave empty to disable.
+          </div>
+          <input
+            id="menuSelectors"
+            type="text"
+            placeholder="e.g. nav a, .menu a, header .navbar a"
+          />
+        </fieldset>
+
+        <div class="hint">
+          Tip: Most use Images, CSS, JS. Keep menu selectors empty unless you
+          specifically want menu links swapped.
+        </div>
+      </div>
+    </div>
+
+    <!-- Cache Buster Tab -->
+    <div id="cache-buster-tab" class="tab-content">
+      <!-- Enabled toggle -->
+      <div class="label-row" style="margin-top: 2px">
+        <span>Enabled</span>
+        <label class="toggle">
+          <input id="cacheBusterEnabled" type="checkbox" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <div id="cacheBusterSettings" class="hidden">
+        <!-- Cache busting options -->
+        <fieldset>
+          <legend>Cache Busting Options</legend>
+
+          <div class="label-row">
+            <span>Add ?ver=timestamp to CSS files</span>
+            <label class="toggle">
+              <input type="checkbox" id="addTimestampCSS" />
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <!-- CSS File Filter -->
+          <div id="cssFileFilter" class="hidden" style="margin-top: 8px">
+            <div class="hint" style="margin-bottom: 6px">
+              CSS file names or patterns (one per line). Leave empty for all CSS
+              files.
+            </div>
+            <textarea
+              id="cssFileNames"
+              placeholder="style.css&#10;main*.css&#10;components/*.css"
+              rows="2"
+            ></textarea>
+          </div>
+
+          <div class="label-row" style="margin-top: 12px">
+            <span>Add ?ver=timestamp to JS files</span>
+            <label class="toggle">
+              <input type="checkbox" id="addTimestampJS" />
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <!-- JS File Filter -->
+          <div id="jsFileFilter" class="hidden" style="margin-top: 8px">
+            <div class="hint" style="margin-bottom: 6px">
+              JS file names or patterns (one per line). Leave empty for all JS
+              files.
+            </div>
+            <textarea
+              id="jsFileNames"
+              placeholder="script.js&#10;app*.js&#10;utils/*.js"
+              rows="2"
+            ></textarea>
+          </div>
+
+          <div class="label-row" style="margin-top: 12px">
+            <span>Disable browser cache for selected domains</span>
+            <label class="toggle">
+              <input type="checkbox" id="disableCache" />
+              <span class="slider"></span>
+            </label>
+          </div>
+        </fieldset>
+
+        <!-- Domain selection -->
+        <fieldset>
+          <legend>Target Domains</legend>
+          <div class="hint">
+            Enter domains to apply cache busting (one per line). Leave empty to
+            apply to all domains.
+          </div>
+          <textarea
+            id="targetDomains"
+            placeholder="example.com&#10;localhost:3000&#10;staging.example.com"
+            rows="4"
+          ></textarea>
+        </fieldset>
+
+        <div class="hint">
+          Cache busting adds timestamp parameters to force reload of CSS/JS
+          files without server changes.
+        </div>
       </div>
     </div>
 
