Move styles to external CSS and SCSS files
Extracted inline styles from popup.html into a new style.css file and added a corresponding style.scss for easier maintenance and scalability. Updated popup.html to reference the external stylesheet.

--- a/popup.html
+++ b/popup.html
@@ -4,212 +4,7 @@
     <meta charset="utf-8" />
     <title>Dev Stack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      :root {
-        --fg: #111;
-        --muted: #666;
-        --bd: #e6e6e6;
-        --ok: #21a366;
-        --bg: #fff;
-      }
-      * {
-        box-sizing: border-box;
-      }
-      body {
-        font: 14px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Helvetica,
-          Arial;
-        color: var(--fg);
-        background: var(--bg);
-        padding: 12px;
-        width: 360px;
-      }
-      h1 {
-        font-size: 16px;
-        margin: 0 0 8px;
-      }
-      input[type="text"] {
-        width: 100%;
-        padding: 8px 10px;
-        border: 1px solid var(--bd);
-        border-radius: 8px;
-        outline: none;
-      }
-      input[type="text"]:focus {
-        border-color: #8ab4f8;
-        box-shadow: 0 0 0 3px rgba(138, 180, 248, 0.25);
-      }
-      label {
-        font-weight: 600;
-        margin-top: 10px;
-        display: block;
-      }
-      .row {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 10px;
-      }
-      .stack {
-        display: flex;
-        flex-direction: column;
-        gap: 6px;
-      }
-      fieldset {
-        border: 1px solid var(--bd);
-        border-radius: 10px;
-        padding: 10px;
-        margin-top: 12px;
-      }
-      legend {
-        padding: 0 6px;
-        color: #444;
-      }
-      .hint {
-        color: var(--muted);
-        font-size: 12px;
-        margin-top: 6px;
-      }
-      button {
-        margin-top: 12px;
-        width: 100%;
-        padding: 10px 12px;
-        border: 0;
-        border-radius: 10px;
-        background: #111;
-        color: #fff;
-        font-weight: 700;
-        cursor: pointer;
-      }
-      button:hover {
-        filter: brightness(1.1);
-      }
-      .small {
-        font-size: 12px;
-      }
-      .ok {
-        color: var(--ok);
-      }
-
-      /* Toggle styling */
-      .label-row {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 12px;
-        margin: 6px 0;
-      }
-      .label-row span {
-        flex: 1;
-      }
-      .toggle {
-        position: relative;
-        display: inline-block;
-        width: 44px;
-        height: 24px;
-      }
-      .toggle input {
-        opacity: 0;
-        width: 0;
-        height: 0;
-      }
-      .slider {
-        position: absolute;
-        cursor: pointer;
-        inset: 0;
-        background-color: #cfcfcf;
-        transition: 0.25s;
-        border-radius: 999px;
-        box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.06);
-      }
-      .slider:before {
-        content: "";
-        position: absolute;
-        height: 18px;
-        width: 18px;
-        left: 3px;
-        top: 3px;
-        background: #fff;
-        border-radius: 50%;
-        transition: 0.25s;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-      }
-      .toggle input:checked + .slider {
-        background-color: #4caf50;
-      }
-      .toggle input:checked + .slider:before {
-        transform: translateX(20px);
-      }
-      .section-title {
-        font-size: 12px;
-        font-weight: 700;
-        text-transform: uppercase;
-        letter-spacing: 0.04em;
-        color: #444;
-        margin-top: 8px;
-      }
-      code {
-        background: #f6f6f6;
-        border: 1px solid var(--bd);
-        padding: 1px 4px;
-        border-radius: 6px;
-      }
-      .hidden {
-        display: none;
-      }
-
-      /* Tab styles */
-      .tab-nav {
-        display: flex;
-        border-bottom: 1px solid var(--bd);
-        margin-bottom: 12px;
-      }
-
-      .tab-button {
-        flex: 1;
-        padding: 8px 12px;
-        border: none;
-        background: transparent;
-        color: var(--muted);
-        font-weight: 600;
-        cursor: pointer;
-        border-bottom: 2px solid transparent;
-        transition: all 0.2s;
-      }
-
-      .tab-button:hover {
-        color: var(--fg);
-        background: #f8f8f8;
-      }
-
-      .tab-button.active {
-        color: var(--fg);
-        border-bottom-color: #8ab4f8;
-      }
-
-      .tab-content {
-        display: none;
-      }
-
-      .tab-content.active {
-        display: block;
-      }
-
-      textarea {
-        width: 100%;
-        padding: 8px 10px;
-        border: 1px solid var(--bd);
-        border-radius: 8px;
-        outline: none;
-        font-family: inherit;
-        resize: vertical;
-        min-height: 80px;
-      }
-
-      textarea:focus {
-        border-color: #8ab4f8;
-        box-shadow: 0 0 0 3px rgba(138, 180, 248, 0.25);
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Dev Stack</h1>
