Add Chrome API mock and reference in popup.html
Introduces chrome-mock.js to simulate Chrome storage API using localStorage for browser testing. Adds a commented script reference to chrome-mock.js in popup.html for easier development outside Chrome.

--- a/popup.html
+++ b/popup.html
@@ -217,6 +217,7 @@
     <button id="save">Save</button>
     <div id="status" class="small"></div>
 
+    <!-- <script src="chrome-mock.js"></script> -->
     <script src="popup.js"></script>
   </body>
 </html>
